[project]
name = "debank"
version = "1.0.0"
description = "debank checker accounts"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi==0.14.0",
    "eth-account==0.13.7",
    "eth-typing==6.0.0",
    "hexbytes==1.3.1",
    "loguru==0.7.3",
    "pydantic==2.12.5",
    "pyuseragents==1.0.5",
    "PyYAML==6.0.3",
    "requests==2.33.1",
    "web3==7.14.1",
]

[dependency-groups]
dev = [
    "ruff==0.15.8",
]

[tool.uv]
package = false
